# quaternion_lib

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
include/: Quaternion.hpp
include/quaternionlib/: Quaternion.hpp
src/: Quaternion.cpp
test/: test.cpp
tests/: CMakeLists.txt  main.cpp  test.cpp
